--- a/src/templates/product.liquid
+++ b/src/templates/product.liquid
@@ -4,6 +4,8 @@
 
 {% section 'product-image-content' %}
 
+{% section 'product-featured-collection' %}
+
 {% section 'product-text-content' %}
 
 {% section 'product-related-products' %}
